Fixed greeting spacing

--- a/styles.css
+++ b/styles.css
@@ -179,6 +179,8 @@ details {
 	}
 	& h3 {
 		display: block;
+		margin-top: 16px;	
+		margin-bottom: 8px;
 		& ul { margin-bottom: 8px; }
 	}
 }
